src/objects/Fixed_Price_Tier3__mdt.object
<CustomObject>
    <fields>
        <fullName>Credit_to_Borrower__c</fullName>
        <label>Credit to Borrower</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origination_to_ORM__c</fullName>
        <label>Origination to ORM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Fixed Price Tier3</label>
    <pluralLabel>Fixed Price Tier3</pluralLabel>
    <listViews>
        <fullName>All_data</fullName>
        <columns>MasterLabel</columns>
        <columns>Rate__c</columns>
        <columns>Price__c</columns>
        <columns>Credit_to_Borrower__c</columns>
        <columns>Origination_to_ORM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All data</label>
    </listViews>
</CustomObject>